--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header{
 
 .vertikal {
     position: absolute;
-    top: 100px;
+    top: 70px;
     right: 0;
     margin-top: 100px;
     letter-spacing: 5px;
@@ -97,7 +97,7 @@ header{
 }
 
 .text-content{
-    margin-top: 70px;
+    margin-top: 80px;
     float: left;
     width: 40%;
     padding: 5px
@@ -149,9 +149,7 @@ header{
 .main-2 .container{
     margin-top: -5%;
 }
-.colored-text {
-    color: #29509C;
-}
+
 .prev,.next{
     float: left;
     color: black;
@@ -177,11 +175,11 @@ header{
     height: auto;
 }
 
-.body .container .heading h2 {
+.heading h2 ,.text-content h2{
     font-size: 30px;
 }
 
-.body .container .heading h3 {
+.heading h3 {
     font-size: 18px;
     color: #3990C8;
 }
@@ -268,7 +266,7 @@ header{
     padding: 30px 0 30px 0;
     font-family: Helvetica;
 }
-.body2 .container.heading h3 {
+.heading h3 , .colored-text{
     color: #47aee1;
     margin: 0 auto;
 }
