--- a/responsive.css
+++ b/responsive.css
@@ -37,6 +37,13 @@
 
 /* For Smartphones */
 @media all and (max-width: 670px) {
+    .header-right {
+        display: none;
+    }
+
+    .menu-icon {
+        display: block !important;
+    }
     .main{
         height: 700px;
     }
