--- a/style.css
+++ b/style.css
@@ -381,6 +381,91 @@ header{
 
 /* batas body 2 */
 footer{
-    background-color: blue;
-    padding: 300px 0 30px 0;
+    background-color: #C0C0C0;
+	color:black;
+	padding:30px 40px 100px 40px;
+	width:100%;
+	height:300px;
+}
+
+footer img {
+	margin-left:5%;
+	margin-bottom:120px;
+	width:140px;
+	float:left;
+}
+
+
+.footer-list li:hover {
+	background-color: #C0C0C0;
+	font-weight:bold;
+}
+
+.footer-list li{
+	list-style:none;
+	font-size:15px;
+	cursor:pointer;
+	padding-bottom:3px;
+}
+
+.footer-list ul1 {
+	font-size:18px;
+	float:left;
+	margin-left:10%;
+	margin-top:30px;
+	margin-bottom:30px;
+}
+
+.footer-list ul2 {
+	font-size:18px;
+	float:left;
+	margin-left:5%;
+	margin-top:30px;
+	margin-bottom:30px;
+}
+
+.footer-list ul3 {
+	font-size:18px;
+	float:left;
+	margin-left:5%;
+	margin-top:30px;
+	margin-bottom:30px;
+}
+
+.footer-right h2 {
+	font-size:18px;
+	float:left;
+	margin-right:10%;
+	margin-left:15%;
+	margin-top:10%;
+	margin-bottom:1%;
+}
+
+.footer-right {
+	float:right;
+	margin-right:15%;
+}
+
+.facebook {
+  color:black;
+  margin-right: 10px;
+}
+
+.twitter {
+  color:black;
+}
+
+.footer-right li {
+	margin-left:5%;
+}
+
+.btn {
+  list-style:none;
+  padding: 6px 12px;
+  opacity: 0.5;
+  display: inline-block;
+}
+
+.btn:hover {
+	opacity:1;
 }
