--- a/responsive.css
+++ b/responsive.css
@@ -75,7 +75,7 @@
         float: none;
     }
     footer{
-        height: 450px;
+        /* height: 600px; */
     }
     footer img{
         margin-bottom:0px;
