--- a/style.css
+++ b/style.css
@@ -385,12 +385,13 @@ footer{
 	color:black;
 	padding:30px 40px 100px 40px;
 	width:100%;
-	height:300px;
+	/* height:300px; */
+    height: auto;
 }
 
 footer img {
 	margin-left:5%;
-	margin-bottom:120px;
+	/* margin-bottom:120px; */
 	width:140px;
 	float:left;
 }
